force-app/main/default/objects/Product2/fields/Bean_Type__c.field-meta.xml
<CustomField>
    <fullName>Bean_Type__c</fullName>
    <label>Bean Type</label>
    <type>Picklist</type>
    <description>Sourcing axis: a single-origin coffee vs a blend. Independent of brew style and roast. Backfilled from Family.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Single-Origin</fullName><default>false</default><label>Single-Origin</label></value>
            <value><fullName>Blend</fullName><default>false</default><label>Blend</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>