force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <description>Which brand catalog this product belongs to. Scopes Concierge recommendations to the site the chat is on (Kwitko Coffee = Woo coffee; Bean &amp; Brew = D2C equipment/accessories).</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Kwitko Coffee</fullName><default>false</default><label>Kwitko Coffee</label></value>
            <value><fullName>Bean &amp; Brew</fullName><default>false</default><label>Bean &amp; Brew</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>