force-app/main/default/objects/Product2/fields/Brew_Style__c.field-meta.xml
<CustomField>
    <fullName>Brew_Style__c</fullName>
    <label>Brew Style</label>
    <type>Picklist</type>
    <description>Recommended brew method for this coffee. Independent of bean type and roast. Backfilled from Family/name; defaults to All-Purpose.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Espresso</fullName><default>false</default><label>Espresso</label></value>
            <value><fullName>Cold Brew</fullName><default>false</default><label>Cold Brew</label></value>
            <value><fullName>All-Purpose</fullName><default>false</default><label>All-Purpose</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>