force-app/main/default/objects/Product2/fields/Flavor_Profile__c.field-meta.xml
<CustomField>
    <fullName>Flavor_Profile__c</fullName>
    <label>Flavor Profile</label>
    <type>Text</type>
    <length>120</length>
    <description>Headline flavor profile — pushed to Woo as the Flavor Profile facet.</description>
</CustomField>