force-app/main/default/objects/Product2/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
    <description>Product image URL pushed to WooCommerce (maps to images[0].src).</description>
</CustomField>