force-app/main/default/objects/Product2/fields/Is_Decaf__c.field-meta.xml
<CustomField>
    <fullName>Is_Decaf__c</fullName>
    <label>Is Decaf</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Caffeine axis: decaf vs regular. Cross-cuts brew style and bean type (e.g. Decaf Espresso). Backfilled from Family/name.</description>
</CustomField>