force-app/main/default/objects/Product2/fields/Is_Flavored__c.field-meta.xml
<CustomField>
    <fullName>Is_Flavored__c</fullName>
    <label>Is Flavored</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Flavored (e.g. vanilla, hazelnut) vs unflavored coffee. Independent axis. Backfilled from Family.</description>
</CustomField>