force-app/main/default/objects/Product2/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Text</type>
    <length>120</length>
    <description>Country/region of origin (single-origin) — pushed to Woo as the Origin facet.</description>
</CustomField>