force-app/main/default/objects/Product2/fields/Product_Specs__c.field-meta.xml
<CustomField>
    <fullName>Product_Specs__c</fullName>
    <description>Deterministic, authored product detail/spec sheet the Concierge relays verbatim so it never invents specs. Beans: origin, roast, bean type, brew style, flavor profile, tasting notes. Equipment: specs + best use case. Composed from the product's real attributes; returned by build_strategy (primarySpecs/complementarySpecs).</description>
    <label>Product Specs</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>