force-app/main/default/objects/Product2/fields/Roast_Level__c.field-meta.xml
<CustomField>
    <fullName>Roast_Level__c</fullName>
    <label>Roast Level</label>
    <type>Picklist</type>
    <description>Roast intensity of the coffee. Independent preference axis. Backfilled from product name; defaults to Medium when unstated.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Light</fullName><default>false</default><label>Light</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Dark</fullName><default>false</default><label>Dark</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>