force-app/main/default/objects/Product2/fields/Stock_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Stock_On_Hand__c</fullName>
    <label>Stock On Hand</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Replenishment stock master; reconciled with Woo; ingested by Data Cloud for in-stock recommendations.</description>
</CustomField>