force-app/main/default/objects/Product2/fields/Woo_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Woo_Last_Sync_Date__c</fullName>
    <label>Woo Last Sync Date</label>
    <type>DateTime</type>
    <description>When this product was last successfully pushed to WooCommerce.</description>
</CustomField>