force-app/main/default/objects/Product2/fields/Woo_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Product_Id__c</fullName>
    <label>Woo Product Id</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>WooCommerce product ID for SF->Woo catalog sync.</description>
</CustomField>