force-app/main/default/objects/Product2/fields/Woo_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Woo_Sync_Error__c</fullName>
    <label>Woo Sync Error</label>
    <type>Text</type>
    <length>255</length>
    <description>Error message from the most recent failed push to WooCommerce.</description>
</CustomField>