force-app/main/default/objects/Product2/fields/Woo_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Woo_Sync_Status__c</fullName>
    <label>Woo Sync Status</label>
    <type>Picklist</type>
    <description>Status of the Salesforce -> WooCommerce push for this product.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not Synced</fullName><default>true</default><label>Not Synced</label></value>
            <value><fullName>Synced</fullName><default>false</default><label>Synced</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>